--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gatsby": "^1.9.45",
     "gatsby-link": "^1.6.17",
+    "gatsby-plugin-styled-components": "^1.0.5",
     "gatsby-plugin-typography": "^1.7.10",
     "typography-theme-fairy-gates": "^0.15.11"
   }
