--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "gatsby": "^1.9.45",
@@ -13,5 +14,8 @@
     "gatsby-plugin-styled-components": "^1.0.5",
     "gatsby-plugin-typography": "^1.7.10",
     "typography-theme-fairy-gates": "^0.15.11"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
